--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					</div>
 					<div id="result">
 						<div id="name"> Döntetlen! </div>
-						<button id="nextRound" onclick="reset()">Következő</button>
+						<button id="nextRound" onclick="reset()">Következő kör</button>
 					</div>
 				</div>
 			
@@ -51,7 +51,7 @@
 				</div>
 				
 				<div id="reset">
-					<button id="resetButton" onClick="newGame()"> Kezdjük előlről!</button>	
+					<button id="resetButton" onClick="newGame()"> Nullázd az eredményt!</button>	
 				</div>
 			</div>
 		</div>
