add alt attribute to all img elements

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<div id="playerName">Játékos</div>
 					</div>
 					<div class="square">
-						<img id="playerValue" src="img/0.png">
+						<img id="playerValue" src="img/0.png" alt="a játékos által választott elem">
 					</div>
 				</div>
 			
@@ -46,7 +46,7 @@
 						<div>Számítógép</div>
 					</div>
 					<div class="square">
-						<img id="computerValue" src="img/0.png">
+						<img id="computerValue" src="img/0.png" alt="a számítógép által választott elem">
 					</div>
 				</div>
 				
@@ -64,13 +64,13 @@
 				<h1>Beállítások</h1>
 				<p id="descripiton">Válassz egy profilképet és adj meg egy becenevet!</p>
 				<div id="profileImages" class="profileImages">
-					<button onClick="choosePicture(1)"><img class="newAvatar" src="img/profilePictures/1.jpg" alt="Zöld szörny" ></button>
-					<button onClick="choosePicture(2)"><img class="newAvatar" src="img/profilePictures/2.jpg" alt="Piros szörny"></button>
-					<button onClick="choosePicture(3)"><img class="newAvatar" src="img/profilePictures/3.jpg" alt="Sárga szörny"></button>
-					<button onClick="choosePicture(4)"><img class="newAvatar" src="img/profilePictures/4.jpg" alt="Lila szörny"></button>
-					<button onClick="choosePicture(5)"><img class="newAvatar" src="img/profilePictures/5.jpg" alt="Narancs szörny"></button>
-					<button onClick="choosePicture(6)"><img class="newAvatar" src="img/profilePictures/6.jpg" alt="Kék szörny"></button>
-					<button onClick="choosePicture(7)"><img class="newAvatar" src="img/profilePictures/7.jpg" alt="Rózsaszín szörny"></button>
+					<button onClick="choosePicture(1)"><img class="newAvatar" src="img/profilePictures/1.jpg" alt="Borz" ></button>
+					<button onClick="choosePicture(2)"><img class="newAvatar" src="img/profilePictures/2.jpg" alt="Nyuszi"></button>
+					<button onClick="choosePicture(3)"><img class="newAvatar" src="img/profilePictures/3.jpg" alt="Kenguru"></button>
+					<button onClick="choosePicture(4)"><img class="newAvatar" src="img/profilePictures/4.jpg" alt="Macska"></button>
+					<button onClick="choosePicture(5)"><img class="newAvatar" src="img/profilePictures/5.jpg" alt="Kutya"></button>
+					<button onClick="choosePicture(6)"><img class="newAvatar" src="img/profilePictures/6.jpg" alt="Medve"></button>
+					<button onClick="choosePicture(7)"><img class="newAvatar" src="img/profilePictures/7.jpg" alt="Róka"></button>
 				</div>
 				<input type="text" id="nameInput" placeholder="Játékos" maxlength="12" autofocus>
 				<span id="inputHelper">Becenév</span>
